2024-02-04T01:08:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7770630863 # 84
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-04
* notice: last 14d: unq all: 19 182
* notice: prev accum: outdated-unq outdated-all / unq all: 549 2848 / 571 3044
* notice: next accum: outdated-unq outdated-all / unq all: 551 2862 / 571 3044
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-20] / []

2024-02-03T16:18:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7768040924 # 83
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-03
* notice: last 14d: unq all: 20 184
* notice: prev accum: outdated-unq outdated-all / unq all: 549 2848 / 570 3037
* notice: next accum: outdated-unq outdated-all / unq all: 549 2848 / 571 3044
* notice: prev exec diff / last date diff / accum: unq all: +1 +7 -1 -12 / +1 +7 -0 -0 / 1 7
* notice: removed / changed dates: [] / [2024-01-20 2024-02-03]

2024-02-03T01:03:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7763400272 # 81
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-03
* notice: last 14d: unq all: 21 189
* notice: prev accum: outdated-unq outdated-all / unq all: 548 2847 / 569 3014
* notice: next accum: outdated-unq outdated-all / unq all: 549 2848 / 570 3037
* notice: prev exec diff / last date diff / accum: unq all: +1 +23 -0 -0 / +3 +26 -0 -0 / 3 26
* notice: removed / changed dates: [2024-01-19] / [2024-02-02]

2024-02-02T16:16:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7758618170 # 80