@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-04T01:08:43Z",
-  "count_outdated" : 2862,
-  "uniques_outdated" : 551,
+  "timestamp" : "2024-02-04T16:16:36Z",
+  "count_outdated" : 2868,
+  "uniques_outdated" : 552,
   "count" : 3044,
   "uniques" : 571,
   "views" : [
-    {
-      "timestamp": "2024-01-21T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
-      "count_decinc": [ 0, 6 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-24T00:00:00Z",
       "count": 21,
