@@ -1,12 +1,7 @@
 {
-  "count": 182,
-  "uniques": 19,
+  "count": 176,
+  "uniques": 18,
   "views": [
-    {
-      "timestamp": "2024-01-21T00:00:00Z",
-      "count": 6,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-24T00:00:00Z",
       "count": 21,
